add idempotent request feature
